--- a/zaragoza.html
+++ b/zaragoza.html
@@ -220,10 +220,10 @@ li.dropdown {
 				</tr>
 				<tr>
 					<td>
-						<img src="most.jpg" alt="Puente de Piedra most" width="364" height="273"><a href="https://en.wikipedia.org/wiki/Puente_de_Piedra_(Zaragoza)"><br>Puente de Piedra most<br></a></img>
+						<img src="most.JPG" alt="Puente de Piedra most" width="364" height="273"><a href="https://en.wikipedia.org/wiki/Puente_de_Piedra_(Zaragoza)"><br>Puente de Piedra most<br></a></img>
 					</td>
 					<td>
-						<img src="crkva.jpg" alt="Crkva Santa Engracia de Zaragoza" width="364" height="273"><a href="https://en.wikipedia.org/wiki/Church_of_Santa_Engracia_de_Zaragoza"><br>Crkva Santa Engracia de Zaragoza<br></a></img>
+						<img src="crkva.JPG" alt="Crkva Santa Engracia de Zaragoza" width="364" height="273"><a href="https://en.wikipedia.org/wiki/Church_of_Santa_Engracia_de_Zaragoza"><br>Crkva Santa Engracia de Zaragoza<br></a></img>
 					</td>
 				</tr>
 			</table>
