--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ li.dropdown {
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Objave</a>
         <div class="dropdown-content">
-		<a href="timeline.html">Timeline</a>
+		<a href="timeline.html">Timeline p</a>
 	  	<a href="putovanja.html">Putovanje u svemir</a>
           	<a href="zaragoza.html">Zaragoza</a>
           	<a href="palacinke.html">Recepti</a>
