--- a/prvagit.html
+++ b/prvagit.html
@@ -7,8 +7,9 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    	font-family: Arial, Helvetica, sans-serif;
 	margin: 0;
+	background-color: #2c3531;
 }
 
 /* Style the header */
