--- a/prvagit.html
+++ b/prvagit.html
@@ -2,16 +2,19 @@
 <html>
 <head>
 <style>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<style>
 * {
     box-sizing: border-box;
 }
-
 body {
-    	font-family: Arial, Helvetica, sans-serif;
-	margin: 0;
-	background-color: #2c3531;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    background-color: #2c3531;
 }
-
 /* Style the header */
 header {
     background-color: #2c3531;
@@ -21,54 +24,23 @@ header {
     color: white;
 	
 }
-
-/* Create two columns/boxes that floats next to each other */
-nav {
-	float: left;
-	background-color: #2c3531;
-	width: 1.5%;
-	height: 476.3px;
-	
-}
-aside {
-	float: right;
-	background-color: #2c3531;
-	width: 1.5%;
-	height: 476.3px;
-	
-}
-
-
-/* Style the list inside the menu */
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
 article {
-    float: left;
+    /*float: left;*/
     padding: 20px;
-    width: 97%;
+    width: 97.6%;
     background-color: #d9b08c;
-    height: 476.3px; /* only for demonstration, should be removed */
-	
+    height: relative; /* only for demonstration, should be removed */
+    position: center;
+    margin: 0px auto;
+    
 }
-
-/* Clear floats after the columns */
-section:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-/* Style the footer */
 footer {
+	
     background-color: #2c3531;
     padding: 10px;
     text-align: center;
     color: white;
 }
-
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
 @media (max-width: 600px) {
     nav, article {
@@ -76,41 +48,56 @@ footer {
         height: auto;
     }
 }
-
 p {
-	font-size: 18px;
+	font-size: 17px;
 	color: 333333;
 }
-
-
-.topnav {
+h2 {
+	text-align: left;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
   background-color: #116466;
+  font-size: 17px;
 }
-
-.topnav a {
+li {
   float: left;
+}
+li a, .dropbtn {
+  display: inline-block;
   color: #d1e8e2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
 }
-
-.topnav a:hover {
+li a:hover, .dropdown:hover .dropbtn {
   background-color: #0b4064;
+}
+li.dropdown {
+  display: inline-block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #116466;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.dropdown-content a {
   color: #d1e8e2;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
 }
-
-.topnav a.active {
-  background-color: #0b4064;
-  color: 333333;
+.dropdown-content a:hover {background-color: #0b4064}
+.dropdown:hover .dropdown-content {
+  display: block;
 }
-
-h2 {
-	text-align: left;
-}
-
 
 
 
@@ -123,13 +110,23 @@ h2 {
 <body>
 	
 	<header>
-		<h2>Putovanja u svemir</h2>
-		<div class="topnav">
-		  <a href="index.html">Pocetna</a>
-		  <a href="mjesec.html">Mjesec</a>
-		  <a href="mars.html">Mars</a>
-		  <a href="proba.html">Proba</a>
-		</div>
+	    <h2>Martin Marčec - Skriptni jezici i web programiranje</h2>
+	    <ul>
+	      <li><a href="index.html">Početna</a></li>
+	      <li class="dropdown">
+		<a href="javascript:void(0)" class="dropbtn">Objave</a>
+		<div class="dropdown-content">
+			<a href="prvagit.html">Timeline</a>
+			<a href="putovanja.html">Putovanje u svemir</a>
+			<a href="zaragoza.html">Zaragoza</a>
+			<a href="palacinke.html">Recepti</a>
+			<a href="procesweb.html">Proces izrade web stranice</a>
+			<a href="boje.html">Kodovi boja</a>
+			<a href="skriptnijezici.html">Skriptni jezici</a>
+			<a href="trazilice.html">Tražilice</a>
+        </div>
+      </li>
+    </ul>
 		
 		
 	</header>
