--- a/prvagit.html
+++ b/prvagit.html
@@ -144,7 +144,7 @@ li.dropdown {
 		<br><br>
 		<p>Izaberi godinu</p>
 		<div class="pagination">
-			<a href="timeline.html">1</a>
+			<a href="prvagit.html">1</a>
 			<a href="druga.html">2</a>
 			<a href="treca.html">3</a>
 			<a href="cetvrta.html">4</a>
