--- a/zaragoza.html
+++ b/zaragoza.html
@@ -139,7 +139,8 @@ li.dropdown {
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Objave</a>
         <div class="dropdown-content">
-          <a href="putovanja.html">Putovanje u svemir</a>
+          <a href="prvagit.html">Timeline</a>
+		<a href="putovanja.html">Putovanje u svemir</a>
           <a href="zaragoza.html">Zaragoza</a>
           <a href="palacinke.html">Recepti</a>
           <a href="procesweb.html">Proces izrade web stranice</a>
