--- a/druga.html
+++ b/druga.html
@@ -169,7 +169,7 @@ h1{
 			<img src="godina2.jpg" alt="">
 			<p id="tekst">Drugi rođendan (2003.)</p>
 			<br><br>
-			<img src="godina2.2.jpg" alt="">
+			<img src="godina2.2.JPG" alt="">
 			<p id="tekst">Božić (2003.)</p>
 
 
