--- a/treca.html
+++ b/treca.html
@@ -165,7 +165,7 @@ h1{
 			<h2></h2>
         
 			<h1>3. Godina</h1>
-			<img src="godina3.jpg" alt="">
+			<img src="godina3.JPG" alt="">
 			<p id="tekst">Moj treći rođendan (2004.)</p>
 			
 			
