--- a/cetvrta.html
+++ b/cetvrta.html
@@ -165,10 +165,10 @@ h1{
 			<h2></h2>
         
 			<h1>4. Godina</h1>
-			<img src="godina4.jpg" alt="">
+			<img src="godina4.JPG" alt="">
 			<p id="tekst">Posjet novorođenoj sestri u bolnici (2005.)</p>
 			<br><br>
-			<img src="godina4.2.jpg" alt="">
+			<img src="godina4.2.JPG" alt="">
 			<p id="tekst">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp - &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(2005.)</p>
 			
 			
