--- a/sesta.html
+++ b/sesta.html
@@ -166,7 +166,7 @@ h1{
         
 			<h1>6. Godina</h1>
 			<img src="godina6.jpg" alt="">
-			<p id="tekst">Priprema vrta za sjetvu (2007.)</p>
+			<p id="tekst">Kopanje vrta (2007.)</p>
 	
 			
 	
