--- a/sedma.html
+++ b/sedma.html
@@ -165,7 +165,7 @@ h1{
 			<h2></h2>
         
 			<h1>7. Godina</h1>
-			<img src="godina7.jpg" alt="">
+			<img src="godina7.JPG" alt="">
 			<p id="tekst">Renoviranje kuće (2008.)</p>
 	
 			
