--- a/osma.html
+++ b/osma.html
@@ -165,7 +165,7 @@ h1{
 			<h2></h2>
         
 			<h1>8. Godina</h1>
-			<img src="godina8.jpg" alt="" width="614" height="460">
+			<img src="godina8.JPG" alt="" width="614" height="460">
 			<p id="tekst">Berba grožđa (2009.)</p>
 	
 			
