--- a/deveta.html
+++ b/deveta.html
@@ -165,10 +165,10 @@ h1{
 			<h2></h2>
         
 			<h1>9. Godina</h1>
-			<img src="godina9.2.jpg" alt="" width="512" height="384">
+			<img src="godina9.2.JPG" alt="" width="512" height="384">
 			<p id="tekst">Nogomet (2010.)</p>
 			<br><br>
-			<img src="godina9.jpg" alt="" width="614" height="462">
+			<img src="godina9.JPG" alt="" width="614" height="462">
 			<p id="tekst">Deveti rođendan (2010.)</p>
 	
 	  </article>
