--- a/petnaesta.html
+++ b/petnaesta.html
@@ -166,9 +166,9 @@ h1{
         
 			<h1>15. Godina</h1>
 			<img src="godina15.jpg" alt="" width="603" height="338">
-			<p id="tekst">Raspakiranje torbi na moru (2016.)</p>
+			<p id="tekst">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp - &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp (2016.)</p>
 			<br><br>
-			<img src="godina15.2.jpg" alt="" width="653" height="490">
+			<img src="godina15.2.JPG" alt="" width="653" height="490">
 			<p id="tekst">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp - &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(2016.)</p>
 			
 	
