--- a/prvagit.html
+++ b/prvagit.html
@@ -168,8 +168,8 @@ li.dropdown {
 			<h2></h2>
         
 			<h1>1. Godina</h1>
-			<img src="godina3.jpg" alt="">
-			<p id="tekst">Neki tekst</p>
+			<img src="godina2.jpg" alt="">
+			<p id="tekst">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp - &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp (2002.)</p>
 	
 			<br><br>
 			
