--- a/druga.html
+++ b/druga.html
@@ -166,7 +166,7 @@ h1{
 			<h2></h2>
         
 			
-			
+			<h1>2. Godina</h1>
 			<img src="godina2.2.JPG" alt="">
 			<p id="tekst">Božić (2003.)</p>
 			<br><br>
