--- a/skriptnijezici.html
+++ b/skriptnijezici.html
@@ -138,14 +138,14 @@ li.dropdown {
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Objave</a>
         <div class="dropdown-content">
-          <a href="prvagit.html">Timeline</a>
-		<a href="putovanja.html">Putovanje u svemir</a>
-          <a href="zaragoza.html">Zaragoza</a>
-          <a href="palacinke.html">Recepti</a>
-          <a href="procesweb.html">Proces izrade web stranice</a>
-          <a href="boje.html">Kodovi boja</a>
-          <a href="skriptnijezici.html">Skriptni jezici</a>
-          <a href="trazilice.html">Tražilice</a>
+          	<a href="prvagit.html">Timeline</a>
+		<a href="svemir.html">Putovanje u svemir</a>
+          	<a href="zaragoza.html">Zaragoza</a>
+          	<a href="palacinke.html">Recepti</a>
+          	<a href="procesweb.html">Proces izrade web stranice</a>
+          	<a href="boje.html">Kodovi boja</a>
+          	<a href="skriptnijezici.html">Skriptni jezici</a>
+          	<a href="trazilice.html">Tražilice</a>
         </div>
       </li>
     </ul>
