--- a/boje.html
+++ b/boje.html
@@ -140,7 +140,7 @@ li.dropdown {
         <a href="javascript:void(0)" class="dropbtn">Objave</a>
         <div class="dropdown-content">
 		<a href="prvagit.html">Timeline</a>
-		<a href="putovanja.html">Putovanje u svemir</a>
+		<a href="svemir.html">Putovanje u svemir</a>
 		<a href="zaragoza.html">Zaragoza</a>
 		<a href="palacinke.html">Recepti</a>
 		<a href="procesweb.html">Proces izrade web stranice</a>
