--- a/svemir.html
+++ b/svemir.html
@@ -82,9 +82,10 @@ h2 {
 	<header>
 		<h2>Putovanja u svemir</h2>
 		<div class="topnav">
-		  <a href="svemir.html">Početna</a>
-		  <a href="mjesec.html">Mjesec</a>
-		  <a href="mars.html">Mars</a>
+		  	<a href="index.html"><img src="icon.png"></a>
+			<a href="svemir.html">Početna</a>
+		  	<a href="mjesec.html">Mjesec</a>
+		  	<a href="mars.html">Mars</a>
 		</div>
 		
 		
