--- a/svemir.html
+++ b/svemir.html
@@ -71,6 +71,11 @@ p {
 h2 {
 	text-align: left;
 }
+	
+#home {
+	padding: 1px 16px
+}	
+	
 </style>
 
 
@@ -82,7 +87,7 @@ h2 {
 	<header>
 		<h2>Putovanja u svemir</h2>
 		<div class="topnav">
-		  	<a href="index.html"><img src="icon.png" width="16" height="16"></a>
+		  	<a href="index.html" id="home"><img src="icon.png" width="22" height="22"></a>
 			<a href="svemir.html">Početna</a>
 		  	<a href="mjesec.html">Mjesec</a>
 		  	<a href="mars.html">Mars</a>
