--- a/svemir.html
+++ b/svemir.html
@@ -74,6 +74,10 @@ h2 {
 	
 #home {
 	padding: 1px 16px;
+	float: left;
+  	color: #d1e8e2;
+  	text-align: center;
+    	text-decoration: none;
 }	
 	
 </style>
