--- a/svemir.html
+++ b/svemir.html
@@ -91,7 +91,7 @@ h2 {
 	<header>
 		<h2>Putovanja u svemir</h2>
 		<div class="topnav">
-		  	<a href="index.html" id="home"><img src="icon.png" width="30" height="30"></a>
+		  	<a href="index.html" id="home"><img src="icon.png" width="30" height="auto"></a>
 			<a href="svemir.html">Početna</a>
 		  	<a href="mjesec.html">Mjesec</a>
 		  	<a href="mars.html">Mars</a>
