--- a/mjesec.html
+++ b/mjesec.html
@@ -84,6 +84,15 @@ p {
 h2 {
 	text-align: left;
 }
+
+#home {
+	padding: 5px 16px;
+	float: left;
+  	color: #d1e8e2;
+  	text-align: center;
+    	text-decoration: none;
+}	
+
 </style>
 
 
@@ -95,9 +104,10 @@ h2 {
 	<header>
 		<h2>Putovanja u svemir</h2>
 		<div class="topnav">
-		  <a href="svemir.html">Početna</a>
-		  <a href="mjesec.html">Mjesec</a>
-		  <a href="mars.html">Mars</a>
+		  	<a href="index.html" id="home"><img src="icon4.png" width="33" height="33"></a>
+			<a href="svemir.html">Početna</a>
+		  	<a href="mjesec.html">Mjesec</a>
+		  	<a href="mars.html">Mars</a>
 		 </div>
 	</header>
 
