--- a/mjesec.html
+++ b/mjesec.html
@@ -95,7 +95,13 @@ h2 {
   	color: #d1e8e2;
   	text-align: center;
     	text-decoration: none;
+}
+	
+td {
+	font-size: 18px;
+	color: #333333;
 }	
+	
 
 </style>
 
@@ -131,8 +137,8 @@ h2 {
 		 <table style="height: 393px" width="403">
 			    <tbody>
 			    <tr>
-			    <td width="552"><b>Tvar</b></td>
-			    <td width="552"><b>Kemijska jednadžba</b></td>
+			    <td width="552"><Tvar<</td>
+			    <td width="552"><Kemijska jednadžba</td>
 			    </tr>
 			    <tr>
 			    <td width="552">Silicijev dioksid</td>
