--- a/mjesec.html
+++ b/mjesec.html
@@ -142,8 +142,8 @@ table, th, td, tr {
 		 <table style="height: 393px" width="403">
 			    <tbody>
 			    <tr>
-			    <td width="552"><Tvar<</td>
-			    <td width="552"><Kemijska jednadžba</td>
+			    <th width="552"><Tvar<</th>
+			    <th width="552"><Kemijska jednadžba</th>
 			    </tr>
 			    <tr>
 			    <td width="552">Silicijev dioksid</td>
