--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ li.dropdown {
     <ul>
       <li><a href="index.html">Početna</a></li>
       <li class="dropdown">
-        <a href="javascript:void(0)" class="dropbtn">Objave</a>
+        <a href="javascript:void(0)" class="dropbtn">3. razred</a>
         <div class="dropdown-content">
 		<a href="prvagit.html">Timeline</a>
 	  	<a href="svemir.html">Putovanje u svemir</a>
