--- a/prvagit.html
+++ b/prvagit.html
@@ -9,11 +9,11 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-    background-color: #2c3531;
+    background-image: url('back.jpg');
 }
 /* Style the header */
 header {
-    background-color: #2c3531;
+    background-color: transparent;
     padding: 20px;
     text-align: center;
     font-size: 35px;
@@ -32,7 +32,7 @@ article {
 }
 footer {
 	
-    background-color: #2c3531;
+    background-color: transparent;
     padding: 10px;
 	padding-left: 37px;
     text-align: left;
@@ -143,7 +143,7 @@ li.dropdown {
     <ul>
       <li><a href="index.html">Početna</a></li>
       <li class="dropdown">
-        <a href="javascript:void(0)" class="dropbtn">Objave</a>
+        <a href="javascript:void(0)" class="dropbtn">3. razred</a>
         <div class="dropdown-content">
 		<a href="prvagit.html">Timeline</a>
 	  	<a href="svemir.html">Putovanje u svemir</a>
@@ -154,7 +154,13 @@ li.dropdown {
           	<a href="skriptnijezici.html">Skriptni jezici</a>
           	<a href="trazilice.html">Tražilice</a>
         </div>
-      </li>
+      	</li>
+	<li class="dropdown">
+          <a href="javascript:void(0)" class="dropbtn">4. razred</a>
+            <div class="dropdown-content">
+                <a href="#">Proba</a>
+            </div>
+      	</li>
     </ul>
     
 		
