--- a/zaragoza.html
+++ b/zaragoza.html
@@ -10,12 +10,12 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-    background-color: #2c3531;
+    background-image: url('back.jpg');
 }
 
 /* Style the header */
 header {
-    background-color: #2c3531;
+    background-color: transparent;
     padding: 20px;
     text-align: center;
     font-size: 35px;
@@ -36,7 +36,7 @@ article {
 
 footer {
 	
-    background-color: #2c3531;
+    background-color: transparent;
     padding: 10px;
     text-align: center;
     color: white;
@@ -137,17 +137,23 @@ li.dropdown {
     <ul>
       <li><a href="index.html">Početna</a></li>
       <li class="dropdown">
-        <a href="javascript:void(0)" class="dropbtn">Objave</a>
+        <a href="javascript:void(0)" class="dropbtn">3. razred</a>
         <div class="dropdown-content">
-          	<a href="prvagit.html">Timeline</a>
-		<a href="svemir.html">Putovanje u svemir</a>
-		<a href="zaragoza.html">Zaragoza</a>
-		<a href="palacinke.html">Recepti</a>
-		<a href="procesweb.html">Proces izrade web stranice</a>
-		<a href="boje.html">Kodovi boja</a>
-		<a href="skriptnijezici.html">Skriptni jezici</a>
-		<a href="trazilice.html">Tražilice</a>
+		<a href="prvagit.html">Timeline</a>
+	  	<a href="svemir.html">Putovanje u svemir</a>
+          	<a href="zaragoza.html">Zaragoza</a>
+          	<a href="palacinke.html">Recepti</a>
+          	<a href="procesweb.html">Proces izrade web stranice</a>
+          	<a href="boje.html">Kodovi boja</a>
+          	<a href="skriptnijezici.html">Skriptni jezici</a>
+          	<a href="trazilice.html">Tražilice</a>
         </div>
+      </li>
+      <li class="dropdown">
+          <a href="javascript:void(0)" class="dropbtn">4. razred</a>
+            <div class="dropdown-content">
+                <a href="#">Proba</a>
+            </div>
       </li>
     </ul>
     
@@ -252,7 +258,7 @@ li.dropdown {
 	</section>
 
 	<footer>
-	  <p>Martin Marcec</p>
+	  <p>Martin Marčec, 4RT</p>
 	</footer>
 
 
