--- a/zaragoza.html
+++ b/zaragoza.html
@@ -36,10 +36,11 @@ article {
 
 footer {
 	
-    background-color: transparent;
-    padding: 10px;
-    text-align: center;
-    color: white;
+    	background-color: transparent;
+    	padding: 10px;
+    	text-align: center;
+    	color: white;
+	font-size: 20px;
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
