--- a/zaragoza.html
+++ b/zaragoza.html
@@ -37,10 +37,10 @@ article {
 footer {
 	
     	background-color: transparent;
-    	padding: 10px;
+    	padding: 20px;
     	text-align: center;
     	color: white;
-	font-size: 20px;
+	font-size: 30px;
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
@@ -259,7 +259,7 @@ li.dropdown {
 	</section>
 
 	<footer>
-	  <p>Martin Marčec, 4RT</p>
+	  Martin Marčec, 4RT
 	</footer>
 
 
