--- a/Program2/index.html
+++ b/Program2/index.html
@@ -11,97 +11,99 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="lijevo">&#10094;</button><!--gumb desno-->
-    <table id="tablica">
-      <tr>
-        <td>ID:</td>
-        <td class="data">1</td>
-      </tr>
-      <tr>
-        <td>Inv. broj:</td>
-        <td class="data">1234A</td>
-      </tr> 
-      <tr>
-        <td>Naziv:</td>
-        <td class="data">stolac</td>
+    <header>
+      <button id="lijevo">&#10094;</button><!--gumb lijevo-->
+      <table id="tablica">
+        <tr>
+          <td>ID:</td>
+          <td class="data">1</td>
         </tr>
-      <tr>
-        <td>Mjesto:</td>
-        <td class="data">uc31</td>
-      </tr>
-      <tr>
-        <td>Ser. broj:</td>
-        <td class="data">12345678</td>
-      </tr>    
-      <tr>
-        <td>A. stopa:</td>
-        <td class="data">25%</td>
-      </tr>                             
-    </table>
-    <button id="desno">&#10095;</button><!--gumb desno-->
- 
-    <table class="table-bordered">  <!--TABLICA-->
-      <tr>
-        <th></th>
-        <th>ID</th>
-        <th>Inventarni broj</th>
-        <th>Naziv</th>
-        <th>Mjesto</th>
-        <th>Serijski broj</th>
-        <th>Amortizacijaska stopa</th>
-        <th>Obrisano</th>
-      </tr>
-      <tr>
-        <td><input type="checkbox"></td>
-        <td>1<br><br></td>
-        <td>Alfreds Futterkiste</td>
-        <td>Maria Anders</td>
-        <td>Obere Str. 57</td>
-        <td>Berlin</td>
-        <td>12209</td>
-        <td>Germany</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox"></td>
-        <td>2</td>
-        <td>Ana Trujillo Emparedados y helados</td>
-        <td>Ana Trujillo</td>
-        <td>Avda. de la Constitución 2222</td>
-        <td>México D.F.</td>
-        <td>05021</td>
-        <td>Mexico</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox"></td>
-        <td>3</td>
-        <td>Antonio Moreno Taquería</td>
-        <td>Antonio Moreno</td>
-        <td>Mataderos 2312</td>
-        <td>México D.F.</td>
-        <td>05023</td>
-        <td>Mexico</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox"></td>
-        <td>4<br><br></td>
-        <td>Around the Horn</td>
-        <td>Thomas Hardy</td>
-        <td>120 Hanover Sq.</td>
-        <td>London</td>
-        <td>WA1 1DP</td>
-        <td>UK</td>
-      </tr>
-      <tr>
-        <td><input type="checkbox"></td>
-        <td>5</td>
-        <td>Berglunds snabbköp</td>
-        <td>Christina Berglund</td>
-        <td>Berguvsvägen 8</td>
-        <td>Luleå</td>
-        <td>S-958 22</td>
-        <td>Sweden</td>
-      </tr>
-    </table>
-
+        <tr>
+          <td>Inv. broj:</td>
+          <td class="data">1234A</td>
+        </tr> 
+        <tr>
+          <td>Naziv:</td>
+          <td class="data">stolac</td>
+          </tr>
+        <tr>
+          <td>Mjesto:</td>
+          <td class="data">uc31</td>
+        </tr>
+        <tr>
+          <td>Ser. broj:</td>
+          <td class="data">12345678</td>
+        </tr>    
+        <tr>
+          <td>A. stopa:</td>
+          <td class="data">25%</td>
+        </tr>                             
+      </table>
+      <button id="desno">&#10095;</button><!--gumb desno-->
+    </header>
+    <footer>
+      <table class="table-bordered">  <!--TABLICA-->
+        <tr>
+          <th></th>
+          <th>ID</th>
+          <th>Inventarni broj</th>
+          <th>Naziv</th>
+          <th>Mjesto</th>
+          <th>Serijski broj</th>
+          <th>Amortizacijaska stopa</th>
+          <th>Obrisano</th>
+        </tr>
+        <tr>
+          <td><input type="checkbox"></td>
+          <td>1<br><br></td>
+          <td>Alfreds Futterkiste</td>
+          <td>Maria Anders</td>
+          <td>Obere Str. 57</td>
+          <td>Berlin</td>
+          <td>12209</td>
+          <td>Germany</td>
+        </tr>
+        <tr>
+          <td><input type="checkbox"></td>
+          <td>2</td>
+          <td>Ana Trujillo Emparedados y helados</td>
+          <td>Ana Trujillo</td>
+          <td>Avda. de la Constitución 2222</td>
+          <td>México D.F.</td>
+          <td>05021</td>
+          <td>Mexico</td>
+        </tr>
+        <tr>
+          <td><input type="checkbox"></td>
+          <td>3</td>
+          <td>Antonio Moreno Taquería</td>
+          <td>Antonio Moreno</td>
+          <td>Mataderos 2312</td>
+          <td>México D.F.</td>
+          <td>05023</td>
+          <td>Mexico</td>
+        </tr>
+        <tr>
+          <td><input type="checkbox"></td>
+          <td>4<br><br></td>
+          <td>Around the Horn</td>
+          <td>Thomas Hardy</td>
+          <td>120 Hanover Sq.</td>
+          <td>London</td>
+          <td>WA1 1DP</td>
+          <td>UK</td>
+        </tr>
+        <tr>
+          <td><input type="checkbox"></td>
+          <td>5</td>
+          <td>Berglunds snabbköp</td>
+          <td>Christina Berglund</td>
+          <td>Berguvsvägen 8</td>
+          <td>Luleå</td>
+          <td>S-958 22</td>
+          <td>Sweden</td>
+        </tr>
+      </table>
+    </footer>
 </body>
 </html>
