--- a/Program2/index.html
+++ b/Program2/index.html
@@ -42,66 +42,71 @@
       <button id="desno">&#10095;</button><!--gumb desno-->
     </header>
     <footer>
+      <div id="editGumbi">
+        <button>Unos u inventar</button><br>
+        <button>Promjena označenog</button><br>
+        <button>Obriši označeno</button><br>
+      </div>
       <table class="table-bordered">  <!--TABLICA-->
         <tr>
-          <th></th>
+          <th><input type="checkbox" id="sve"></th>
           <th>ID</th>
-          <th>Inventarni broj</th>
+          <th>Inv. broj</th>
           <th>Naziv</th>
           <th>Mjesto</th>
-          <th>Serijski broj</th>
-          <th>Amortizacijaska stopa</th>
+          <th>Ser. broj</th>
+          <th>Am. stopa</th>
           <th>Obrisano</th>
         </tr>
         <tr>
           <td><input type="checkbox"></td>
           <td>1<br><br></td>
-          <td>Alfreds Futterkiste</td>
-          <td>Maria Anders</td>
-          <td>Obere Str. 57</td>
-          <td>Berlin</td>
-          <td>12209</td>
-          <td>Germany</td>
+          <td>0000</td>
+          <td>stolac</td>
+          <td>UC31</td>
+          <td>1111</td>
+          <td>25</td>
+          <td>0</td>
         </tr>
         <tr>
           <td><input type="checkbox"></td>
           <td>2</td>
-          <td>Ana Trujillo Emparedados y helados</td>
-          <td>Ana Trujillo</td>
-          <td>Avda. de la Constitución 2222</td>
-          <td>México D.F.</td>
-          <td>05021</td>
-          <td>Mexico</td>
+          <td>0001</td>
+          <td>računalo</td>
+          <td>UC31</td>
+          <td>2222</td>
+          <td>20</td>
+          <td>0</td>
         </tr>
         <tr>
           <td><input type="checkbox"></td>
           <td>3</td>
-          <td>Antonio Moreno Taquería</td>
-          <td>Antonio Moreno</td>
-          <td>Mataderos 2312</td>
-          <td>México D.F.</td>
-          <td>05023</td>
-          <td>Mexico</td>
+          <td>0002</td>
+          <td>stol</td>
+          <td>UC40</td>
+          <td>3333</td>
+          <td>50</td>
+          <td>0</td>
         </tr>
         <tr>
           <td><input type="checkbox"></td>
           <td>4<br><br></td>
-          <td>Around the Horn</td>
-          <td>Thomas Hardy</td>
-          <td>120 Hanover Sq.</td>
-          <td>London</td>
-          <td>WA1 1DP</td>
-          <td>UK</td>
+          <td>0003</td>
+          <td>ploča</td>
+          <td>UC40</td>
+          <td>4444</td>
+          <td>50</td>
+          <td>1</td>
         </tr>
         <tr>
           <td><input type="checkbox"></td>
           <td>5</td>
-          <td>Berglunds snabbköp</td>
-          <td>Christina Berglund</td>
-          <td>Berguvsvägen 8</td>
-          <td>Luleå</td>
-          <td>S-958 22</td>
-          <td>Sweden</td>
+          <td>0004</td>
+          <td>računalo</td>
+          <td>UC32</td>
+          <td>5555</td>
+          <td>25</td>
+          <td>0</td>
         </tr>
       </table>
     </footer>
