--- a/Program2/index.html
+++ b/Program2/index.html
@@ -14,14 +14,14 @@
     <article>
       <div id="prvo">
         <button id="lijevo">&#10094;</button><!--gumb lijevo-->
-        <table class="table-bordered" id="jedan">
+        <table id="jedan">
           <tr>
             <td>ID:</td>
             <td class="data">1</td>
           </tr>
           <tr>
             <td>Inv. broj:</td>
-            <td class="data">1234A</td>
+            <td class="data">0000</td>
           </tr> 
           <tr>
             <td>Naziv:</td>
@@ -29,15 +29,15 @@
           </tr>
           <tr>
             <td>Mjesto:</td>
-            <td class="data">uc31</td>
+            <td class="data">UC31</td>
           </tr>
           <tr>
             <td>Ser. broj:</td>
-            <td class="data">12345678</td>
+            <td class="data">1111</td>
           </tr>    
           <tr>
             <td>A. stopa:</td>
-            <td class="data">25%</td>
+            <td class="data">25</td>
           </tr>                             
         </table>
         <button id="desno">&#10095;</button><!--gumb desno-->
@@ -49,7 +49,7 @@
         </div>
     </article>
     <footer>
-      <table class="table-bordered" id="tablica">  <!--TABLICA-->
+      <table id="tablica">  <!--TABLICA-->
         <tr>
           <th><input type="checkbox" id="sve"></th>
           <th>ID</th>
