--- a/Program2/unos/unos.html
+++ b/Program2/unos/unos.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/gif" href="svi-logo.PNG" sizes="32x16">
     <link rel="stylesheet" href="stil.css">
     <title>Unos podataka</title>
 </head>
 <body>
-    <label for="naziv">Naziv</label>
-    <input type="text" id="naziv">
-    <br>
-    <label for="mjesto">Mjesto</label>
-    <select name="mjesto">
-        <option value="UC31">UC31</option>
-        <option value="UC32">UC32</option>
-        <option value="UC34">UC34</option>
-        <option value="UC40">UC40</option>
-    </select>
+    <form action="B.php" method="get">		
+        <label for="naziv">Naziv</label>
+        <input type="text" id="naziv">
+        <label for="mjesto">Mjesto</label>
+        <select name="mjesto">
+            <option value="UC31">UC31</option>
+            <option value="UC32">UC32</option>
+            <option value="UC34">UC34</option>
+            <option value="UC40">UC40</option>
+        </select>
+        <label for="ser">Serijski broj</label>
+        <input type="text" id="ser">
+        <label for="am">Amortizacijska stopa</label>
+        <input type="text" id="am">                 
+        <input type="submit" name="Submit" value="ŠALJI" id="submit"> 			
+        </form>
+           
 </body>
 </html>
