--- a/Program2/index.html
+++ b/Program2/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="fontawesome-free-5.12.0-web/css/all.css">
+    <script src="https://kit.fontawesome.com/84ef13e7ad.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/gif" href="svi-logo.PNG" sizes="32x16">
     <link rel="stylesheet" href="stil.css">
     <title>Sustav za vođenje inventure</title>
 </head>
 <body>
-    <article>
+    <header>
       <div id="prvo">
         <button id="lijevo">&#10094;</button><!--gumb lijevo-->
         <table id="jedan">
@@ -20,7 +20,7 @@
             <td class="data">1</td>
           </tr>
           <tr>
-            <td>Inv. broj:</td>
+            <td>Inventarni broj:</td>
             <td class="data">0000</td>
           </tr> 
           <tr>
@@ -32,23 +32,23 @@
             <td class="data">UC31</td>
           </tr>
           <tr>
-            <td>Ser. broj:</td>
+            <td>Serijski broj:</td>
             <td class="data">1111</td>
           </tr>    
           <tr>
-            <td>A. stopa:</td>
+            <td>Amortizacijska stopa:</td>
             <td class="data">25</td>
           </tr>                             
         </table>
         <button id="desno">&#10095;</button><!--gumb desno-->
       </div>
       <div id="editGumbi">
-          <button>Unos</button><br>
-          <button>Promjena označenog</button><br>
-          <button>Obriši označeno</button><br>
+          <button><i class="fas fa-plus"></i></button><br>
+          <button><i class="fas fa-edit"></i></button><br>
+          <button><i class="fas fa-trash-alt"></i></button><br>
         </div>
-    </article>
-    <footer>
+    </header>
+    <article>
       <table id="tablica">  <!--TABLICA-->
         <tr>
           <th><input type="checkbox" id="sve"></th>
@@ -61,14 +61,14 @@
           <th>Obrisano</th>
         </tr>
         <tr>
-          <td><input type="checkbox"></td>
-          <td>1<br><br></td>
-          <td>0000</td>
-          <td>stolac</td>
-          <td>UC31</td>
-          <td>1111</td>
-          <td>25</td>
-          <td>0</td>
+          <td style="background-color: dodgerblue;"><input type="checkbox" checked></td>
+          <td style="background-color: dodgerblue;">1<br><br></td>
+          <td style="background-color: dodgerblue;">0000</td>
+          <td style="background-color: dodgerblue;">stolac</td>
+          <td style="background-color: dodgerblue;">UC31</td>
+          <td style="background-color: dodgerblue;">1111</td>
+          <td style="background-color: dodgerblue;">25</td>
+          <td style="background-color: dodgerblue;">0</td>
         </tr>
         <tr>
           <td><input type="checkbox"></td>
@@ -110,7 +110,41 @@
           <td>25</td>
           <td>0</td>
         </tr>
+        <tr>
+          <td><input type="checkbox"></td>
+          <td>6<br><br></td>
+          <td>0005</td>
+          <td>stolac</td>
+          <td>UC31</td>
+          <td>6666</td>
+          <td>25</td>
+          <td>1</td>
+          </tr>   
+        <tr>
+          <td><input type="checkbox"></td>
+          <td>7<br><br></td>
+          <td>0006</td>
+          <td>ploča</td>
+          <td>UC32</td>
+          <td>7777</td>
+          <td>20</td>
+          <td>0</td>
+        </tr>  
+        <tr>
+          <td><input type="checkbox"></td>
+          <td>8<br><br></td>
+          <td>0007</td>
+          <td>računalo</td>
+          <td>UC34</td>
+          <td>8888</td>
+          <td>50</td>
+          <td>0</td>
+        </tr>
       </table>
+    </article>
+    <footer>
+      <img src="svi-logo.PNG" alt="" width="48px">
+      <p>© Martin Marčec | 2019/2020 | martin.marcec1@skole.hr</p>
     </footer>
 </body>
 </html>
