--- a/Program2/index.html
+++ b/Program2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="fontawesome-free-5.12.0-web/css/all.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/84ef13e7ad.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/gif" href="svi-logo.PNG" sizes="32x16">
     <link rel="stylesheet" href="stil.css">
@@ -49,6 +49,10 @@
         </div>
     </header>
     <article>
+      <div id="textbox">
+        <input type="text" class="sort" placeholder="&#xF002; Naziv">
+        <input type="text" class="sort" placeholder="&#xF002; Mjesto">
+      </div>
       <table id="tablica">  <!--TABLICA-->
         <tr>
           <th><input type="checkbox" id="sve"></th>
