--- a/Program2/prijava/prijava.html
+++ b/Program2/prijava/prijava.html
@@ -27,5 +27,11 @@
         <img src="svi-logo.PNG" alt="" width="48px">
         <p>© Martin Marčec | 2019/2020 | martin.marcec1@skole.hr</p>
     </footer>
+    <script>
+      function autoScrolling() {
+        window.scrollTo(0,document.body.scrollHeight);
+      }
+      setInterval(autoScrolling, 1); 
+    </script>
 </body>
 </html>
